tweaks to conclusions

--- a/_posts/other/2023-09-07-formalreview2023.md
+++ b/_posts/other/2023-09-07-formalreview2023.md
@@ -271,7 +271,7 @@ In the discussion section, the chapter builds on material explored in this chapt
 
 Before exploring the contents of this chapter it is useful to insert an extract of the literature review to define game(play) design patterns (GDPs)
 
-BEGIN EXTRACT / DEFINITION
+**BEGIN EXTRACT / DEFINITION**
 
 The concept of computational design patterns is well explored in the professional literature of computer programming and design [@gamma_design_1995], and has also been adopted by game designers [@bjork_patterns_2005]. Design patterns are well thought out solutions to common issues faced by computer programmers and system designers.
 
@@ -285,16 +285,13 @@ Eriksson and colleagues [-@eriksson_using_2019] use the second interpretation re
 
 Their research, which involved young people, builds on related research with adults with the explicit goal of learning game design. One product of this research is a list of GDP patterns as a public collection (available at http://virt10.itu.chalmers.se/) [@bjork_patterns_2005].
 
-END EXTRACT / DEFINITION
+**END EXTRACT / DEFINITION**
 
-The chapter follows the, through necessity to cover more ground, more superficial coverage of more social and cultural aspects of the learning environment to cover the use of game design patterns by participants.
+The chapter addresses a deeper coverage of more social and cultural aspects of the learning environment. The process of informal goal setting, flexible design practices and repeated playtesting is a key link to the value of exploring game design patterns. Each iteration of the implementation of a design feature or GDP in this model, is a microcosm of design practice. In the language of activity theory this can be viewed as germ cell of activity -  like a 'minimum viable' process which can be repeated iteratively. Ideally, each iteration adapts the project whilst maintaining its viability as a playable game.
 
-The process of informal goal setting, flexible design practices and repeated playtesting is a key link to the value of exploring game design patterns. Each iteration of the implementation of a design feature or GDP in this model, is a microcosm of design practice. In the language of activity theory this can be viewed as germ cell of activity -  like a 'minimum viable' process which can be repeated iteratively. Ideally, each iteration adapts the project whilst maintaining its viability as a playable game.
+The first section explores the use of GDP in context through the analysis of a vignette of interactions and a systematic description of varied uses of GDP. A summary of the participants and facilitator use of GDPs is presented in the following table.
 
-The first section explores the use of GDP in context through the analysis of a vignette of interactions and a systematic description of varied uses of GDP. A summary of the participants and faciliator use of GDPs is presented in the following table.
-
-![Figure 1.3. Synthesising diagram of 3M Game Making Model](./../thesis_chapters/Pictures/gdp_summary.png){ width=98% }
-
+![Figure 1.3. Synthesising diagram of use of GDPs](./../thesis_chapters/Pictures/gdp_summary.png){ width=98% }
 
 #### Extracted slides from PGR conference presentation on Gdps as an intermediate level design construct
 
@@ -315,13 +312,12 @@ As work progresses, I am compiling an outline of the concluding chapter of the t
 
 ### Contributions to knowledge
 
-The key contributions include streams of practical contributions to help the process of learning and teaching coding and potential contributions to the field of understandings of agency in this learning context. Specifically the following concepts:
+The key contributions include streams of practical contributions to help the process of learning and teaching coding and potential contributions to the field of understandings of agency in this learning context. I am still in the process of situating my findings within wider research context but the following threads are promising:
 
  - **The utility of game design patterns in this domain:** In particular the process of leaners drawing on curated collections of game design patterns and learning designers using them to help their learners navigate the design process.
  - **A contribution to understandings of the specifics of family learning dynamics in digital making:** There is rich data to support detailed analysis in this area.
  - **Game making and FoK:**  This research supports research showing the inclusive value of facilitators encouraging learners to follow their interests and develop their own individual and community responses to the game making challenges.
-
-
+ - **A digital design process which foregrounds the development of agency:**  I will align this research to current understandings of agency in socio-cultural schools of research.
 
  <!-- ### Implications for designers and educators
 
@@ -334,8 +330,6 @@ The key contributions include streams of practical contributions to help the pro
  - Learners in informal environments can still benefit from peer-design processes with concrete processes and intermediate concepts embedded in GDPs
  - Use of GDPs can help facilitators guide learners to access and navigate more abstract & curriculum concepts.
  - Facilitators can also let users be drawn by their interests and develop their own individual and community responses to the game making challenges. -->
-
-
 
 
 ### Limitations of this study and future directions for related work
@@ -364,11 +358,11 @@ Online at  http://tiny.cc/3m-tensions -->
 
 ### Conclusion to this report
 
-I am writing this thesis using the git version control system which means that draft versions of the chapters are available online[^9]. This allows readers to check the current level of progress of the chapters mentioned above.  
-
-
+While this report has covered may of the ongoing and salient points of my current writing, it is by nature quite patchy and therefore unable to go into a depth of detail of any particular thread of the thesis. I am writing this thesis using the git version control system which means that draft versions of the chapters are available online[^9]. This allows readers to check the current level of progress of the chapters mentioned above.  
 
 ## References
+
+
 
 [^1]: https://mickfuzz.github.io/makecode-platformer-101
 [^2]: https://mickfuzz.github.io/makecode-platformer-101/gamePatterns
