Mostly formatting and references

--- a/_posts/other/2023-09-07-formalreview2023.md
+++ b/_posts/other/2023-09-07-formalreview2023.md
@@ -35,21 +35,13 @@ In the last report I explained that early dissemination of results had prompted 
 
 Three book chapters have been published / sent for print.
 
-- An extract of the chapter  _Game Making and Coding Fluency in a Primary Computing Context_, is in
-DETAILS OF THE COLLECTION
+- Two chapters were for an audience of teachers as part of a proposed collection _Inclusive Computing Education in the Secondary School, Linking Theory and Practice_. One chapter analysed abstract and concrete approaches to computing education [@overland_inclusive_2023]. The other covered design and project approaches in this subject[@overland_inclusive_2023]. I will be able to include material from this writing into my introductory thesis chapters.
 
-- Two chapters were for an audience of teachers as part of a proposed collection _Inclusive practice and theory in computing education, Alternative perspectives on curriculum and classrooms_. One chapter analysed abstract and concrete approaches to computing education. The other covered design and project approaches in this subject. I will be able to include material from this writing into my introductory thesis chapters.
-
+- A chapter  _Game Making and Coding Fluency in a Primary Computing Context_ [@chesterman_game_2023], has been published in the collection _Teaching Coding in K-12 Schools, Research and Application_ [@keane_teaching_2023]. This chapter is included as the following sections of the report with sections removed to fit this report. A full pre-publisher Word Document of this chapter is available online [via this link here](https://github.com/mickfuzz/phd4/raw/main/_posts/worddocs/ch_12_3MCF_6.odt)
 
 ## Book Chapter -  Game Making and Coding Fluency in a Primary Computing Context
 
-
-
-[This is an extract with sections removed to fit this report. A full pre-publisher Word Document of this chapter is available online at https://github.com/mickfuzz/phd4/raw/main/_posts/worddocs/ch_12_3MCF_6.odt](https://github.com/mickfuzz/phd4/raw/main/_posts/worddocs/ch_12_3MCF_6.odt)
-
-
 #### Keywords: coding games, digital making, design patterns, game elements, digital inclusion
-
 
 ## Abstract
 
