--- a/_posts/other/2023-09-07-formalreview2023.md
+++ b/_posts/other/2023-09-07-formalreview2023.md
@@ -9,6 +9,8 @@ categories: other
 title: Second Formal Review - Year 4 End (part-time PhD) - Mick Chesterman
 ---
 
+**6400 words approx without references**
+
 ## Introduction
 
 The review report will give an update on the progress of my thesis and relevant outputs. In creating this report I have been inspired by the patchwork approach of reflective writing in terms of form [@scoggins_patchwork_1999]. Extracts and summaries of existing writing and outputs are also framed with reflective commentary. My goal here is to try to best utilise the potential guidance and support of readers of report and to engage with a reflective process at this review point by shifting my perspective to help describe an overall narrative of the thesis a this moment in time.
@@ -22,28 +24,19 @@ By far the largest patch is a published book chapter [^1] which is included at t
 
 ## Summary of associated activity since the last review
 
-### Dissemination of results via presentations and showcase work
-
 In the last report I explained that early dissemination of results had prompted analysis which yielded the 3M pedagogical model .
 
 -  **Presentation at Manchester Games Network Conference 2023:** a presentation focusing in the use of game design patterns (explored later in this report).
 -  **Presentation at Manchester Met PGR Conference 2023:** a presentation giving an overview of the study and context.  
 -  **Partnership showcase with Manchester Science and Industry museam and Manchester Games Network and RISE:** three days of game making and coordinating students in a partnership.  
 
+Three book chapters have been published / sent for print. Two chapters were for an audience of teachers as part of a proposed collection _Inclusive Computing Education in the Secondary School, Linking Theory and Practice_. One chapter analysed abstract and concrete approaches to computing education [@overland_inclusive_2023]. The other covered design and project approaches in this subject[@overland_inclusive_2023]. I will be able to include material from this writing into my introductory thesis chapters.
 
-### Book chapters in print
-
-Three book chapters have been published / sent for print.
-
-- Two chapters were for an audience of teachers as part of a proposed collection _Inclusive Computing Education in the Secondary School, Linking Theory and Practice_. One chapter analysed abstract and concrete approaches to computing education [@overland_inclusive_2023]. The other covered design and project approaches in this subject[@overland_inclusive_2023]. I will be able to include material from this writing into my introductory thesis chapters.
-
-- A chapter  _Game Making and Coding Fluency in a Primary Computing Context_ [@chesterman_game_2023], has been published in the collection _Teaching Coding in K-12 Schools, Research and Application_ [@keane_teaching_2023]. This chapter is included as the following sections of the report with sections removed to fit this report. A full pre-publisher Word Document of this chapter is available online [via this link here](https://github.com/mickfuzz/phd4/raw/main/_posts/worddocs/ch_12_3MCF_6.odt)
+Another chapter  _Game Making and Coding Fluency in a Primary Computing Context_ [@chesterman_game_2023], has been published in the collection _Teaching Coding in K-12 Schools, Research and Application_ [@keane_teaching_2023]. This chapter is included as the following sections of the report with sections removed to fit this report. A full pre-publisher Word Document of this chapter is available online [via this link here](https://github.com/mickfuzz/phd4/raw/main/_posts/worddocs/ch_12_3MCF_6.odt)
 
 ## Book Chapter -  Game Making and Coding Fluency in a Primary Computing Context
 
-#### Keywords: coding games, digital making, design patterns, game elements, digital inclusion
-
-## Abstract
+### Abstract
 
 This chapter describes digital game making as an inclusive process to develop coding concepts and coding fluency. It outlines research which emerges from my work with young learners of ages 8-11 which leverages the motivational and navigational affordances of enthusiast game making communities and adapts them to more structured educational environments. I summarise the features of two game making tools used in my study. Finally, this chapter contains an overview of the 3M game making learning design and links to extensive resources for learners and teachers.
 
@@ -55,21 +48,7 @@ While there has been a large body of research on the value and practice of game 
 
 In this chapter, I explore the potential of digital game making as an inclusive way of developing coding concepts and coding fluency in the later stages of Primary Education. This chapter begins with a short summary of the United Kingdom (UK) context of coding and inclusion. This is followed by a section on game making as an inclusive, project-based teaching approach. I then describe two game making tools used in my study before outlining the process of the development of a learning design in partnership with participants. I end with an overview of what I provisionally call the 3M game making learning design and offer links to the resulting resources suitable for learners and fellow practitioners.
 
-
 ## Context
-
-
-## Game Making, Project Based Learning and Inclusion
-
-
-**Family Game Experience as an inclusive Fund of Knowledge:**
-REMOVED FOR BREVITY
-
-**Game Making as an Authentic Activity:** REMOVED FOR BREVITY
-
-**Coding and Computational Fluency:** REMOVED FOR BREVITY
-
-## An Overview of Game Coding Tools
 
 REMOVED FOR BREVITY
 
@@ -82,7 +61,6 @@ Barab and Squire [-@barab_design-based_2004] describe the messiness of design-ba
 One experimental team consisted of Home Educating families. A second programme involved local primary school children in Year 6 (10-11 year old) classes. Given space constraints, in this chapter I focus on the pedagogical results rather than the observational data that has guided them. However, I include a short summary of data collection methods here. I have drawn on multiple methods including ethnographic journaling as a participant observer, participant interviews, and analysis of artefacts used and created. I have also undertaken analysis of participant actions via the videoing of the workshop area with a 360-degree video camera and capture of screen data and audio of the laptops used by participants. While the rich set of data has allowed the cross referencing of the many sources, it also presented a challenge of how to deal effectively with the large amounts of data being gathered. The use of a 360 camera reduced the amount of live video footage of interactions needed. Instead of multiple cameras pointed in different directions to capture participant interaction, participants were arranged in a square pointing inwards towards a central 360-degree camera. When triangulating data from various sources, I prioritised critical moments in depth which illuminated key themes. Analysis of interviews, observation journal notes and screen captures allowed me to identify tensions arising for facilitators and participants in the game making process. Analysis of these tensions allowed me to examine and revise teaching approaches and supporting resources. My approach involved not to remove all tensions - as some may be productive in the learning process - but rather to identify and avoid unproductive blockages. For example, in my journal notes I observed in pair work significant confusion and disputes regarding setting short-term project goals and frustration over lost work and time. As a response, I introduced a variety of tools and processes to aid the self-motivation and navigation of learners. Other examples of tensions include the following: difficulties in getting games ready for play-testing due to being lost in the detail of coding; an ability gap between features that participants wanted to add to the game and their technical abilities; the difficulty of supporting learners' different approaches to coding; and a lack of reflection on progress and appreciation of the complex learning dimensions involved in game making.
 
 When analysing journal notes I drew on observations of strategies and responses that participants and facilitators used to resolve tensions. If effective, I would attempt to incorporate them into future teaching resources. For example, I noticed that many participants would deviate from accepted game making practice and try to create impossible or prank-filled games. This desire from participants to cause frustration in game play sometimes had a productive impact on their level of engagement and the complexity of the game design the coding structures they created. Responses to recognise and encourage this behaviour are outlined below. At the end of the game making programs I analysed journal notes and the changes to teaching resources to collate and code the responses to tensions to find common themes. I synthesised and refined the presentation of the responses using these themes as a way to help both learners and other facilitators to navigate and address similar issues when game making. The final part of this chapter gives an overview of the learning design that has emerged from this participatory design-based approach.
-
 
 ## Overview of The 3M Game Making Learning Design
 
@@ -179,14 +157,13 @@ This section contains links and descriptions of supporting resources that have e
 Table 1.2.  Key Features of 3M Game Making Model
 
 
-### Supporting Resource 1: Phaser and Glitch.com
+### Supporting Resources
 
 The following resources exist for text-based coding using the Phaser javascript framework. While other programming environments can be used, these resources are based on learners using the glitch.com code playground website.
 
 * A splash page for Phaser / Glitch.com resources. This contains links to print outs, tutorials and activities[^7].
 * An interactive starting template and grid of game design patterns that learners can add to the incomplete template [^8].
 
-OTHER RESOURCES REMOVED FOR BREVITY
 
 ## Conclusion
 
@@ -228,27 +205,23 @@ I will outline the main premises of four main chapters containing the process an
 
 #### Evolution of methodology
 
-During data analysis I used Rogoff's [-@rogoff_observing_1995-1] three planes / foci of personal, social and community to help focus and organise observational notes. The model which problematises the dichotomy of learner led, teacher led approaches [@mascolo_beyond_2009] suited the space between formal and informal learning that this community based model of game making occupies.
+The foundation of this research is a design-based research approach which is underlined by Activity Theory (AT) as a conceptual framework. The use of activity theory as an underlying conceptual framework in used together with design-based research methodology and the elements of 3GAT to explore tensions and resolutions in emerging activity. CHAT relies on analysis of systemic tensions in activity and culture [@barab_using_2002]. Tensions in the emerging design and the experience of participant conflict in activity systems served to drive the evolution of this learning design. I have also drawn on recent research which distinguishes type of learner agency including transformative, authorial and instrumental agency.
 
-The foundation of this research is a design-based research approach which is underlined by Activity Theory (AT) as a conceptual framework. The use of activity theory as an underlying conceptual framework in used together with design-based research methodology and the elements of 3GAT to explore tensions and resolutions in emerging activity.
-
-CHAT relies on analysis of systemic tensions in activity and culture [@barab_using_2002]. Tensions in the emerging design and the experience of participant conflict in activity systems served to drive the evolution of this learning design. I have also drawn on research which distinguishes type of learner agency including transformative, authorial and instrumental agency. The work of Sannino on the use of secondary stimulation in formative interventions informs the analysis of conflicts arising and secondary tools and processes which facilitators use to address them [@sannino_activity_2011]. Thus Sannino's concept TADS, transformative agency through double stimulation, addresses the potential for participants to leverage external tools to influence their experience in learning activities.
-
-This has influenced how I am presenting my findings as I found that attempting to describe tensions framework were cumbersome when attempting to follow the prescriptive nature of 3GAT in a complete fashion. Instead, led by more recent understandings of conflict and transformation explored by Sannino and colleagues with TADS research [@engestrom_transformative_2022; @sannino_transformative_2022-1], I am focusing on more in depth explorations of key facilitator tensions and conflicts experienced by participants.  
+The work of Sannino on the use of secondary stimulation in formative interventions informs the analysis of conflicts arising and secondary tools and processes which facilitators use to address them [@sannino_activity_2011]. Thus Sannino's concept TADS, transformative agency through double stimulation, addresses the potential for participants to leverage external tools to influence their experience in learning activities [@engestrom_transformative_2022; @sannino_transformative_2022-1]. This line of research influences the presentation of my findings. Rather than describe tensions framework in a prescriptive nature of 3GAT in a complete fashion which I found cumbersome and potentially distracting, I am focusing on more in depth explorations of key facilitator tensions and conflicts experienced by participants.  
 
 #### Analysis of video data
 
 To allow for a greater depth of analysis I opted to analyse 12 video recordings in depth from 5 key game making sessions in greater detail rather than 60 video recordings from 12 sessions in a more summative fashion. In the last review I outlined that I am exploring alternatives to coding video data in the Nvivo software package due to its limitations in playing and reviewing video data and the large amount of video data I am dealing with. I have adopted a process for coding and describing section which breaks video segments into 5 minute pieces and use a word document template to record notes which can later be imported into Nvivo for analysis. This process also allows me to use free software to synchronise and view video and data from pc capture and wider 360 captured footage.
 
-When coding I started with some preset codes from the literature for examples Barron and colleagues' on parent roles when helping digital projects [-@barron_parents_2009]. As coding progressed, I have modified and extended these roles into codes to better match my recorded data. I also initially drew on design stages as a schema for coding. This proved useful mostly to highlight that making in this setting rarely followed a recognisable design pattern but was much more spontaneous in nature. Similarly, initial codes that I chose around patterns of participant interaction and activity and the type of game feature they were working on did not prove useful to answer the research questions. In contrast, as data began to emerge on the significance of game design patterns, the use of became useful themes in data analysis. These are presented as a table in the commentary on chapter six below.
+When coding I started with some preset codes from the literature for examples Barron and colleagues' on parent roles when helping digital projects [-@barron_parents_2009]. As coding progressed, I have modified and extended these roles into codes to better match my recorded data. I also initially drew on design stages as a schema for coding. This proved useful mostly to highlight that making in this setting rarely followed a recognisable design pattern but was much more spontaneous in nature. Similarly, initial codes that I chose around patterns of participant interaction and activity and the type of game feature they were working on did not prove useful to answer the research questions. In contrast, as data began to emerge on the significance of game design patterns, the use of became useful themes in data analysis. These are presented as a table in the commentary on chapter six below. There is still work for me to do to revisit chosen coding themes in greater detail to methodically justify my findings.
 
 ### Commentary on chapter four - Emerging Learning Designs
 
-Due to the novel nature of the learning design a detailed outline of the evolution and specifics therein are important to situate findings in the following two chapters.This chapter draws four interviews conducted with peer practitioners to expose barriers to digital making activity and tactics to overcome such barriers. The middle section gives an overview of the evolution of the learning design which draws on analysis of participants reactions and contributions, journal notes, and participant interviews. This data is used in combination with analysis of emergent learning resources to describe key facilitator tensions and conflicts experienced by participant.  
+Due to the novel nature of the learning design a detailed outline of the evolution and specifics therein are important to situate findings in the following two chapters. This chapter draws four interviews conducted with peer practitioners to expose barriers to digital making activity and tactics to overcome such barriers. The middle section gives an overview of the evolution of the learning design which draws on analysis of participants reactions and contributions, journal notes, and participant interviews. This data is used in combination with analysis of emergent learning resources to describe key facilitator tensions and conflicts experienced by participant.  
 
 An additional section examines the learning map and physical map elements outlined in the 3M model above. When examining data this material created to suit a more formal settings to help resolve tension between freedom of creative direction and the need to cover key curricula concepts does not feature significantly in the experience of participants. Review of data participants in this study reveals limited data which extensive reflection in my journal notes shows stems from my inconsistency in introducing and facilitating the use of these materials. However, based on the limited use of the materials in this study and from my analysis of existing research and for a wider potential audience in more formal settings, I propose that there is significant potential for these reflective processes and navigational materials.
 
-This section explains the limitations of this study in this area, compared to other elements of the learning design. Currently, this section sits a bit uneasily in this chapter and thus it may be revised or moved to the conclusion. However, the assumptions and approaches seem important as a foil to some of the discussions around flexible, learner-led desing practices explored in the following chapter.
+This section explains the limitations of this study in this area, compared to other elements of the learning design. Currently, this section sits a bit uneasily in this chapter and thus it may be revised or moved to the conclusion. However, the assumptions and approaches seem important as a foil to some of the discussions around flexible, learner-led design practices explored in the following chapter.
 
 
 ### Overview of chapter five - Seeding and Nurturing Game Making Communities to Facilitate Learner Agency
@@ -326,12 +299,13 @@ The key contributions include streams of practical contributions to help the pro
 
 ### Limitations of this study and future directions for related work
 
-The nature of this study as collaborative, emergent and focused lends itself to the kinds of results and contributions as outlined above rather than to
+I offer the following points as limitations of this study and interesting areas for development. It would useful to discuss some of them when we meet.  
 
 - While a separate program using a different software authoring tools was conducted, the processes are not compared in this thesis.
-- The specifics of the home education learning environment are not explored in this study to any great extent.
-- the limited number participants and lack of any specific goals of representation invites follow up research in different settings and using different methods to select participants.
 - While computational thinking and systems thinking were surfaced as potential elements of a learning dimensions map that emerged from later stages of the study, further work would be needed to investigate this potential in more detail.
+-  The specifics of the home education learning environment are not explored in this study to any great extent.
+- the limited number participants and lack of any specific goals of representation invites follow up research in different settings and using different methods to select participants.
+- The nature of this study as collaborative, emergent and focused lends itself to contributions on the potential of this approach rather than larger claims of generalised efficacy. I do feel working with this mix of home education participants and subject enthusiasts may be a particularly fruitful process to generate innovative learning materials and approaches.
 
 <!-- ### Present goals to complete thesis
 
@@ -353,8 +327,6 @@ Online at  http://tiny.cc/3m-tensions -->
 While this report has covered may of the ongoing and salient points of my current writing, it is by nature quite patchy and therefore unable to go into a depth of detail of any particular thread of the thesis. I am writing this thesis using the git version control system which means that draft versions of the chapters are available online[^9]. This allows readers to check the current level of progress of the chapters mentioned above.  
 
 ## References
-
-
 
 [^1]: https://mickfuzz.github.io/makecode-platformer-101
 [^2]: https://mickfuzz.github.io/makecode-platformer-101/gamePatterns
