--- a/_posts/thesis_chapters/2023-6-6-Gdps.md
+++ b/_posts/thesis_chapters/2023-6-6-Gdps.md
@@ -96,10 +96,11 @@ The purpose of this chapter is to explore how the data gathered informs thinking
 - How can game design patterns support the development of coding practices by novices?
 - How can learners build agency in an evolving community of game makers?
 
-
 In the last chapter we explored inclusive pedagogical methods that helped participants become part of an emerging community of game makers. This chapter analyses a sub-activity system to the creation of the whole game, namely the implementation of individual game design patterns (GDPs).
 
 ### On GDP as unit of analyis
+
+NOTE  - WHERE TO PUT THIS?
 
 The implementation of GDPs as a unit of analysis for the researcher also has the following utility / validity;
 
