--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -669,6 +669,138 @@ The use of code playgrounds mirrors that of professionals. The process of creati
 While early use of microworlds as a "acceptable" authentic-ish a concept endorsed in literature on authentic approaches [].
 
 
+
+
+## The impact of the core tools of code playgrounds and templated game
+
+<!-- The choice of the starting toolset and mission shapes the balance and profile of initial community activity. -->
+<!-- As explored in the literature review, the concept of a Microworld which embodies target concepts has extensive supporting and descriptive research.  -->
+
+<!-- NOTE - USE MICROWORLD OR NOT AS CONCEPT IN THIS CHAPTER? -->
+
+The last chapter outlined the design characteristics of the coding tools in a face-to-face learning environment, namely: an incomplete 2D platformer; pixel graphics; with graphical scaffolding for text-based code; and deliberately incomplete thus inviting improvement. In this section, I draw on my journal notes and past experience and observations from interpretation of video data to share observations on the use of these tools.
+
+<!-- Make point that it is hard to separate out tools and communities. In case of Mozilla, code playgrounds, and teach the web, and the culture of developers and teaching communities they are interlinked. Discuss and compare to Kafai in book, the lineage of Logo, Scratch. Instead the more authentic approach of a real language.
+ -->
+
+### Code playground
+
+<!--
+MOVE
+he last chapter outlined the use and design characteristics of the starting point of an incomplete 2D platformer with low-spec graphics, with graphical scaffolding for text-based code, and deliberately broken.
+While the following chapter explores the use of game design patterns in detail, this section addresses the impact of the template on participant coding practices, based on video observations of learners directly interaction with the template triangulated with journal notes from phases 2 and 3 and participant feedback from phase one. -->
+<!-- THIS NEEDS REVISION - USEFUL BUT WHAT FOCUS - DEBUGGING TOOLS? - DESIGN HEURISTICS - LIKE SCRATCH -->
+
+<!-- NOTE - THEME THIS? COMPLEXITY, APPEARANCE, -->
+
+
+My motivation for choice of code language (Javascript, Phaser) was driven by desire to be authentic and extensible. The use of glitch.com as a code playground significantly reduced technical barriers for students related to this choice. In terms of first impressions, learners first experience of the experience was in the process of playing a game in a webpage and controlling the character using the computers arrow/ cursor keys which for many was a familiar process.
+
+In terms of technical complexity, using a code playground removed the process of setting up a server for web development, and the delay and complexity of transferring files to the server. While the code project consisted of several files of javascript, HTML and CSS, learners were shielded from the complexity of how they were interlinked. In the video data analysed, there were practically no extended blockages to undertaking work related to the use of this environment. While this study does not attempt to quantify this factor, the experience compares very favourably to my experiences of using and teaching coding environments.
+
+There were some issues of access for some participants who did not remember or recall log in details or their project name. These issues were mitigated through the use of a log in details shared between participants. When users struggled to log in or to find the games or assets that they had created earlier there sought and received help from family members or other peers. Direct help from facilitators was rarely required. In the glitch environment code errors were highlighted in with red dot in the interface which gave a quick visual indication of where the error occurred, when the user hovered over gave an error message as a pop up, which while limited and sometimes misleading, gave participants immediate feedback on syntax errors. In analysis of video data, I observed learners reacting to this feedback and either reversing errors such as deleting commas, semi-colons and quotations marks. When participants were coding as a pair, especially the parent was observing they would often notice and point out the red dot, thus preventing further errors.  The next chapter explores different types of errors and participant responses to them.
+
+![](./Pictures/codeplayground_redot.png){width=50%}
+
+<!-- NOTE - LINK TO OTHER KINDS OF ERRORS - NEXT CHAPTER -->
+
+### Impact of the half-baked game template
+
+<!-- NOTE SOME OF THIS CAN  -->
+
+As explored in the last chapter, participants starting with an incomplete game template to scaffold the initial creative and coding process.
+
+<!-- In phase one, I noted that any addition to the game in terms of adding new any quantity of code created many potential coding, conceptual and organisational challenges. To counter this I adapted the starting game template to allow changes in code were relatively easy to perform but which resulted in potentially large changes in game behaviour and appearance. -->
+
+Brief help was available via in-line text code comments allowing for self-directed or previously proficient learners to progress with minimal support. In addition, supporting cards (see figure 4.x below) suggested possible adaptations  and illustrated the relevant code changes needed.
+
+![](./Pictures/quickstart_phaser_1.png){width=50%}
+4.x - Example of a Quick start card
+
+The templated game was structured to allow changes in code which were relatively easy to perform but which resulted in potentially large changes in game behaviour, appearance and difficulty. This created a large diversity in the games created and in the making activities of participants at this stage despite the small scale of the code changes involved.  Thus while I created these resources and the corresponding code structures to facilitate a _quick start_, the diversity of experience kept some participants extended periods of time.
+
+<!-- I kept the process informal and responsive by allowing participants to choose which one they wanted to work on next. The following sections outline different areas and patterns of activity. -->
+
+<!-- COMMENT OF mOZILLA TOD THAT IT WAS GENTLE FACILITATION -->
+
+<!-- - level design and prototyping: use of
+- fluid variable editing effective movement
+- The swapping of assets and more complex work with code syntax
+- development of simple stories to bump personal expression and narrative -->
+
+<!-- NOTE - All longer or shorter chains of actions , becoming operations - WHERE DOES THIS FIT?
+NOTE - Also justify having so emergent results here , delay while accessing help to start 360 recordings
+As the end process is visible in fluid behaviour -->
+
+<!-- These tools align with some key design considerations. [Brennan & Resnick]
+ - Well suited to build a repeated design practice.
+ - Small changes had big effects.
+ - Variable changes needed immediate testing.  
+ - Especially with starting documents, -->
+
+<!-- While the design suits repeated design practice as illustrated by the example above, not all pairs or individuals interacted with GDP in such a neat way.
+A later discussion section in this chapter illustrates a more complex interaction with design stages. -->
+
+These observations build on the description of the game template in the last chapter.
+
+**Variable editing for movement:** Participants needed to change the code to allow effective player movement. This thus forced all participants to alter at least one of the key variables were highlighted at the very start of the game code. Following this first change however behaviour varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement.
+
+**Level design and prototyping:** The starting game template included a minimal amount of platforms, hazards to avoid and golden blocks to collect. Many participants spent significant time and effort on level design both in initial stage and in subsequent sessions, undertaking many iterations of changes to the level design. As explored in the vignette in the previous chapter, Toby and several others designed to make the game challenging but still technically possible. In contrast, two participants played with the convention of the game by removing all hazards and filling the screen with rewards/coins.
+
+<!-- The vignette in the last chapter saw Toby's adding new levels to his game and undertaking many iterations of changes to the level design.  -->
+
+<!-- The possibility of disturbing the syntax of the  of code in the array. When participant did this it provided a good opportunity for facilitators or parents to outline the importance of correct syntax of and to explain the code structure. -->
+
+
+**Use of pixel art to seed narrative and art creativity:** One activity that all participants spent some time on was to replace the coloured block of the starting template with pixel art sprites created using the Piskel tool. Participant spent a widely different length of time creating these graphics. Some took a long time to master the process of using the editing tool. Some others struggled with the process of exporting the images to the code editor. Others were relatively rapid in creation but returned to alter their creations. As they had been guided to make a game on a broadly environmental theme. Participants often redesigned sprites to games involving animals. The following image shows a whale as a player character and plastic bottles.
+
+![](./Pictures/whale_1.png){width=50%}
+
+<!-- MOVE?
+The process of creating a pixel art characters and hazard involved using an online grid design tool called Piskel, creating an design of an appropriate size, saving, exporting as an image, downloading to the hard drive of the laptop in use and finally uploading and incorporating the image into the code project and linking using code syntax. -->
+
+#### Observations on design behaviours encouraged through use of game template
+
+While the simple changes to the game dynamics and patterns embedded in the starting template were motivation and enagement, some participants soon began to ask how to make additions to the game. A common request was to add a moving enemy to the game. There was a great divergence in the amount of time learners took to want to progress beyond making embedded changes to adding new game design patterns. One parent Molly did not progress beyond this point despite engaging in phase three and phase four, focusing on graphical design and developing narratives. In the feedback session she commented that she was happy to reinforce her existing learning.
+
+At this _quick start_ stage, knowledge of very few coding concepts were essential. It useful to compare this to a typical process of learning to code in a text language from first principles where the learner is met with a great many new concepts in the process of being guided to construct even the most basic of programs.  Thus, while some basic alterations are being made, this stage of learning design aligns mosst closely with the _Use_ stage of the UMC model (see lit review/ glossary) [@lee_computational_2011].  
+
+Instead analysis of the video data of participants reveals a large number of broader digital literacy skills involved in certain processes. For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel (a simplified Photoshop including - crop, fill and export tools); copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. Undertaking the full process involved learnign a complex chain of  these individual actions.
+
+<!-- IS THERE DUPLICATION HERE - OPERATION ALSO ANALYSE VIA AT? -->
+Some participants became remarkably adapt at this, thus transforming this chain of actions into a fluid operation. Learners who had mastered the skills were asked by others for help. The rapid adoption and transfer of these processes between community members indicated a high motivational factor for participants of incorporating self-created graphical elements, a topick which is also addressed in the following section.  
+
+<!-- While the template has self contained help in the form of text comments Some participant do not pick up all processes, some left behind and need support but that is available. Seeing patterns other peers adopted and creates a reason to ask for help. Peer propagation of patterns explored later. -->
+
+<!-- Perhaps move later after GDP chapter?  -->
+<!-- **Limitation of asset work as a GDP**
+Note the limits of this interpretation
+While the reinterpretation of the MDA framework into a menu of GDP is practical for the elements that they want to change, it is not strictly a pattern to be implemented here.
+ tension here to be briefly explored or noted to explore later. -->
+
+<!-- #### Circulation of peers and helpers
+This often facilitates talk aloud of design decisions and justifications.
+Cross reference playtesting -->
+
+<!-- ### Accessing Help and Documentation
+In the emerging community there was a variety of help available including;
+- Written documentation from the learning design via step by step tutorials
+- A series of code examples in working code playgrounds
+- Facilitator help through asking for help
+- Student Helper attention and help
+- Peer support from parents and children -->
+
+<!-- ### Discussion on initial tool use and starting processes
+DEVELOP THIS SECTION -->
+
+<!-- These observations can be explore in relation to other research
+- This research supports claims that half-baked games invite development []
+- This research also supports other research on the attraction (and motivation) of retro, (introduction) on culture and livingstone, sefon-green. -->
+
+
+
+
+
 ## Participant conflicts / contractions
 
 Beyond the design tensions above that were smaller in scope and addressed relatively quickly, this section examines more extensive contradictions between system elements which developed into conflicts which significant in stopping participant progress. The first involves clashes of identity and ambition and the second frustrations due to technical processes.
