on structure of chapters 4 and 5

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -78,6 +78,19 @@ title: 4. Emerging Learning Designs
 2. How can learners build agency in an evolving community of game makers?
 3. How can game design patterns support the development of coding practices with novices?
 
+
+## Notes on structure
+
+Moved impact of software tools here - and overall on templated approach on a micro level  -  which therefore becomes less of this study's focus - and needs less evidence - drawing mostly on my journal notes and the evolution of the tools and design themselves.  
+
+However in terms of tensions - there is one on cultural tensions - this may need moving to the next chapter - a more thematic approach. 
+
+In most of this chapter focus on the tools and authenticity in relation to other tools.
+
+Also the practitioner interviews - could be a bit disjointed - as they do relate to cultural barriers and tactics. But could say those are explored in other chapters.
+
+
+
 ## Chapter Introduction  
 
 This chapter
@@ -120,7 +133,6 @@ _Table of initial data_
 https://docs.google.com/document/d/1aEF0EsZRe-Ovok2VP7ouYH_v-SdepnNnXFhLtj6SseU/edit
 
 <!--
-
  Convert here.
 https://tabletomarkdown.com/convert-spreadsheet-to-markdown/
 
