--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -83,7 +83,7 @@ title: 4. Emerging Learning Designs
 
 Moved impact of software tools here - and overall on templated approach on a micro level  -  which therefore becomes less of this study's focus - and needs less evidence - drawing mostly on my journal notes and the evolution of the tools and design themselves.  
 
-However in terms of tensions - there is one on cultural tensions - this may need moving to the next chapter - a more thematic approach. 
+However in terms of tensions - there is one on cultural tensions - this may need moving to the next chapter - a more thematic approach.
 
 In most of this chapter focus on the tools and authenticity in relation to other tools.
 
@@ -145,8 +145,6 @@ https://tabletomarkdown.com/convert-spreadsheet-to-markdown/
 | Tactic: Non-coding activities amd games to increase group connections as a good preparation for coding related challenges and frustrations. | 5         |
 | Barrier: students not considering them selves as STEM / coding types of people                                                              |           |
 | Barrier: logistical issues of time and equipment in school settings                                                                         |           |
-
-
 
 **Additional short commentary**
 
@@ -222,7 +220,6 @@ Screen shot of the menu of choices. -->
 ## Short vignette illustrating shifts in scope of activity
 
 ### Context of  Vignette
-
 
 The following vignette, consisting of extracts of participant activity over 20 mins of a session, is presented as an summary of different scopes of activity. The participant is the child Toby who in this session has been working independently.
 
@@ -1104,7 +1101,10 @@ _Missions as Islands_
 
 REPLACE WITH 360 OF MAPS
 
-I have de-prioritised Maps as an area of study in this thesis partly this is due to it well explored in other research []FIND SOURCES, and partly as the implementation was patchy. It is of value to out like key tensions in the design that maps have the potential to address in more formal teaching environments. I am currently investigating replicating the use of maps process using online tools to reduce complexity and preparation time. This theme is also explored later in this section.
+I have de-prioritised Maps as an area of study in this thesis partly this is due to it well explored in other research []FIND SOURCES, and partly as the implementation was patchy as I concentrated on more narrative and in person reflection (see later chapter on Methods)
+
+MOVE LATER? FINAL CHAPTER?
+It is of value to out like key tensions in the design that maps have the potential to address in more formal teaching environments. I am currently investigating replicating the use of maps process using online tools to reduce complexity and preparation time. This theme is also explored later in this section.
 
 <!-- It explores these tensions in relation to existing research and contains further discussion to inform possible future directions of research. -->
 
