--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -81,7 +81,18 @@ title: 4. Emerging Learning Designs
 
 ## Notes on structure
 
-Moved impact of software tools here - and overall on templated approach on a micro level  -  which therefore becomes less of this study's focus - and needs less evidence - drawing mostly on my journal notes and the evolution of the tools and design themselves.  
+
+<!-- NOTE:
+Moved impact of software tools here - and overall on templated approach on a micro level  -  which therefore becomes less of this study's focus - and needs less evidence -->
+
+- drawing mostly on my journal notes and the evolution of the tools and design themselves.  
+
+- **Interviews (and Lit review ):** exposes motivations and barriers to undertaking activity  this domain from interviews with peer practitioners and literature review
+
+- gives an overview of the evolution of the learning design
+
+- draws on immediate analysis of participants reactions and contributions from journal notes, and participant interviews and analysis of changes in the learning resources created to present an exploration of tensions
+
 
 However in terms of tensions - there is one on cultural tensions - this may need moving to the next chapter - a more thematic approach.
 
