--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -1223,6 +1223,19 @@ For example, the use of CT concepts in a framework, listed as part of the initia
 
 ## Conclusion
 
+### Discussion on Authenticity of Tools
+
+Authentic tools in settings where students may find their novice skills lacking can negatively impact on experiences of self-efficacy and thus agency. While this is clearly the case in factory-based drama proceses, the value of digital tools allows students to to work with more authentic practices.
+
+In addition, an inspirational aspect of _lifting the lid_ on previously unknown technology was reflected in a conversation among adult participants. They communicated a sense of awe of how much code must be involved in a professional game based on the relative complexity of the code of their simple game.
+
+
+While the last chapter addressed authenticity of tools and processes in general terms this chapter has explored the impact on learners. For example, the design of the starting template shielded learners from much of the complexity of the underlying web-technology and provided affordances via embodied elements that facilitated learner agency via expression of home interests, play with dynamics and game layout. The partially working environment and immediate feedback this allowed also gave rapid access access to varied forms of face to face community activity including varied forms of playtesting and social interaction and ways to access help from peers and facilitators.
+
+These observations support existing research on computing projects in the work of Papert [-@papert_mindstorms_1980] on Mircoworlds and subsequent research on programming tools in the constructionist tradition [@kafai_constructionism_1996-1; @kafai_mindstorms_2014]. In this study, in contrast to the specially created tools of Scratch and Logo, the protected Microworld is built as a shield area within a more genuine ecology of authentic tool use and practices.
+
+
+
 ### Limits to the learning dimensions map in an informal setting
 
 This map was designed to link with particular conceptions of learning whilst still retaining a sense of the uniqueness of the affordances of this design. The settings are, CT in school curriculums, systems thinking, design approaches. These align broadly with a STEM approach. The rationale behind this is that Game Making commonly aligns with these curriculum areas and they are particularly suited to explore via iterative game making.
@@ -1230,6 +1243,11 @@ This map was designed to link with particular conceptions of learning whilst sti
 The process of developing the learning dimensions map was helpful for me as a researcher in that it helped decided to keep the focus on this study on more informal and organically evolving processes. This emerging perspective also developed as I read underlying ontological approaches to the socio cultural understandings of learning which problematise the separate of the content to be learned
 
 While I attempted to resolve this by adopting Bevan and al's observational approach, the process of making this more relevant and recognisable for UK teachers arguably drew me off course. This theme is explored in detail in the next two chapters.
+
+
+
+
+
 
 ### Starting discussion on the mutual nature of the design process.
 
