--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -6,7 +6,7 @@ zotero:
   csl-style: harvard-manchester-metropolitan-university # pre-fill the style
 layout: post
 categories: chapter
-title: 4. Emerging Learning Designs
+title: 4. Exploration of the Formative Learning Design Process
 ---
 -   [Research Questions - June 2023](#research-questions---june-2023)
 -   [Chapter Introduction](#chapter-introduction)
@@ -93,26 +93,26 @@ Moved impact of software tools here - and overall on templated approach on a mic
 
 - draws on immediate analysis of participants reactions and contributions from journal notes, and participant interviews and analysis of changes in the learning resources created to present an exploration of tensions
 
-
 However in terms of tensions - there is one on cultural tensions - this may need moving to the next chapter - a more thematic approach.
 
 In most of this chapter focus on the tools and authenticity in relation to other tools.
 
-Also the practitioner interviews - could be a bit disjointed - as they do relate to cultural barriers and tactics. But could say those are explored in other chapters.
-
+Also the practitioner interviews - could be a bit disjointed - as they do relate to cultural barriers and tactics. But could say those are explored in other chapters. DONE
 
 
 ## Chapter Introduction  
 
 This chapter
 
-- exposes motivations and barriers to undertaking activity  this domain from interviews with peer practitioners and literature review
-- gives an overview of the evolution of the learning design
+- exposes motivations, tactics for and barriers to undertaking activity this domain from interviews with peer practitioners (supplementing the literature review)
+- gives an overview of the evolution of the key pedagogical features of the learning design used in the research process
 - draws on immediate analysis of participants reactions and contributions from journal notes, and participant interviews and analysis of changes in the learning resources created to present an exploration of tensions
+- explores 2 key conflicts using the terminology of Saninno
+- Presents a synthesis to barriers (and) tactics to overcome them
 
-Due to the novel nature of the learning design the detailed outline of the evolution and specifics therein are also important to situate findings in the following two chapters.
+Due to the novel nature of the learning design the detailed outline of the specifics of the participants experience of the design are important to situate findings in the following two chapters.
 
-**Key questions / motivations in creating a new learning community**
+**Key questions / motivations in creating a new learning community - MOVE?**
 
 The game making community is not authentic or mature in the practices they are undertaking, the kind of community practices which we can undertake are focused partly on building connections to existing knowledge and practice. One of my roles as designer here was to uncover and to help participants explore knowledge that they were unaware they possessed.
 
@@ -1219,9 +1219,16 @@ Examples include;
 
 For example, the use of CT concepts in a framework, listed as part of the initial design pattern card, which could then be discussed, ticked off or otherwise reflected on. -->
 
-
-
 ## Conclusion
+
+### Summary of barriers exposed in this study
+
+A summary (table or text) of the barriers exposed in interviews and in journal observations and in feedback from participants. Perhaps linking to appendix.
+
+NOTE - THIS IS NEEDED FOR LATER CHAPTERS
+
+
+
 
 ### Discussion on Authenticity of Tools
 
